--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         // Redirect after 1 second (for better UX)
         setTimeout(() => {
             // window.location.reload();
-            window.location.href = "/ghiblify/fool.html";
+            window.location.href = "/fool.html";
             e.target.value = ''; // Reset input
         }, 1000);
     });
