--- a/fool.html
+++ b/fool.html
@@ -299,7 +299,7 @@
 <script>
     function sharePrank() {
         const host = window.location.hostname;
-        const shareText = `💖 You gotta see this! I just got totally Ghiblified by this Check it out:`;
+        const shareText = `😍 You gotta see this! I just got totally Ghiblified by this Check it out:`;
 
         // Try Web Share API first
         if (navigator.share) {
