--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
 <header class="ghibli-pro-header">
     <div class="header-branding">
         <h1 class="ghibli-logo">Ghiblify</h1>
-        <a class="brand-subtext" href="https://www.flashsalesindia.in">by FlashSalesIndia.in</a>
+        <a class="brand-subtext" target="_blank" href="https://www.flashsalesindia.in">by FlashSalesIndia.in</a>
     </div>
 
-    <a href="https://t.me/yourchannel" target="_blank" class="telegram-join-btn">
+    <a href="https://t.me/+h5aJskjMclkwOTc1" target="_blank" class="telegram-join-btn">
         <svg class="telegram-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm5.894 8.221l-1.97 9.28c-.145.658-.537.818-1.084.508l-3-2.21-1.446 1.394c-.14.135-.26.24-.52.24l.213-3.053 5.56-5.022c.24-.213-.054-.334-.373-.121l-6.869 4.326-2.96-.924c-.64-.203-.658-.64.135-.954l11.566-4.458c.538-.196 1.006.128.832.941z"/>
         </svg>
