--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
         <p>© 2025 FlashSalesIndia.in | All rights reserved.</p>
     </div>
 </footer>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G0JHK6GLMF"></script>
 <script>
     document.getElementById('upload-photo').addEventListener('change', function(e) {
         const label = document.getElementById('upload-label');
@@ -358,6 +359,14 @@
             e.target.value = ''; // Reset input
         }, 1000);
     });
+</script>
+
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G0JHK6GLMF');
 </script>
 </body>
 </html>
