--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <footer class="ghibli-footer">
     <div class="footer-content">
         <p>© 2025 FlashSalesIndia.in | All rights reserved.</p>
+        <p>❤️ Special Thanks to <a target="_blank" href="https://codepen.io/Alvin_joy_mavely/pens/public" >@Alvin_joy_mavely</a> for the base <a target="_blank" href="https://codepen.io/Alvin_joy_mavely/pen/MWmvadP">template</a></p>
     </div>
 </footer>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G0JHK6GLMF"></script>
